added css for background image

--- a/mystyle.css
+++ b/mystyle.css
@@ -25,7 +25,8 @@ p{
 body{
 	margin: 10%;
 	padding: 0;
-	float: left;
+	background-image: url("images/red.jpg");
+	background-size: cover;
 }
 section{
 	background-color:rgba(150,75,75,0.6);
